[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/optionFront.png" type="Texture" id=1]
[ext_resource path="res://OptionCard.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 75, 105 )

[node name="OptionCard" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="FlavorContainer" type="MarginContainer" parent="."]
margin_left = -75.0
margin_top = -105.0
margin_right = 75.0
margin_bottom = -28.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlavorText" type="RichTextLabel" parent="FlavorContainer"]
margin_top = 31.0
margin_right = 150.0
margin_bottom = 46.0
mouse_filter = 2
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center][color=black]Default flavor text[/color][/center]"
text = "Default flavor text"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="EffectContainer" type="MarginContainer" parent="."]
margin_left = -75.0
margin_top = 34.0
margin_right = 75.0
margin_bottom = 105.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectText" type="RichTextLabel" parent="EffectContainer"]
margin_top = 28.0
margin_right = 150.0
margin_bottom = 43.0
mouse_filter = 2
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center][color=black]Default effect text[/color][/center]"
text = "Default effect text"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
